made game buttons match in style and moved reset and music to bottom of card game. time and moves remain on top row - spacing/margins for all still need to be fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,14 @@ body p {
     color: black;
 }
 
+.game-button {
+    margin: 15px 0 30px 0;
+    background-color: yellow;
+    border: 3px solid pink;
+    border-radius: 0px;
+    color: black;
+}
+
 .overlay-button {
         margin: 15px 0 30px 0;
     background-color: yellow;
